# textproof

./: README.md  brokentext.txt  fixme.txt  fixmeout.txt  pyproject.toml  setup.cfg  setup.py
src/textproof/: __main__.py  api.py  checked_text.py  fileio.py  typo.py
test/: conftest.py  dummy.py  out.txt  test_api.py  test_checked_text.py  test_fileio.py  test_typo.py
tests/: conftest.py  test_api.py  test_checked_text.py  test_fileio.py  test_typo.py
