[metadata]
name = textproof
version = 1.0.0
description = Perform command-line spelling and grammar check on text.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_file = LICENSE
author = Jason C. McDonald
author_email = codemouse92@outlook.com
url = https://github.com/codemouse92/textproof
project_urls =
    Bug Reports = https://github.com/codemouse92/textproof/issues
    Funding = https://github.com/sponsors/CodeMouse92
    Source = https://github.com/codemouse92/textproof
keywords = proof spelling grammar utility

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    requests
    click
python_version = >=3.6, <4

[options.packages.find]
where = src
exclude = tests

[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts =
    textproof = textproof.__main__:main

[flake8]
max-line-length = 120
